# DataHobbit

./: pyproject.toml  readme.md
src/: pyproject.toml
src/DataHobbit/: data_hobbit.py
