[project]
name = "hobbit-xml"
version = "0.1.0"
description = "Parsing XML and JSON data; 'There and Back Again'"
authors = [
    {name = "Jeremy Huntsman",email = "J.T.Huntsman@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "xmltodict (>=0.14.2,<0.15.0)"

]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
